# naraka

./: .gitignore  build.zig  meson.build  rendering  thinking.txt
data/: frag.frag  test.janet
src/: Batch.cc  Batch.hh  Poster.cc  Poster.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh  Util.cc  Util.hh  janet.cc  main.cc
